Update docker files

--- a/ci/docker/opensuse/Dockerfile
+++ b/ci/docker/opensuse/Dockerfile
@@ -1,50 +1,19 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/r/opensuse/tumbleweed
 FROM opensuse/tumbleweed AS env
-LABEL maintainer="corentinl@google.com"
+LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=$PATH:/usr/local/bin
 RUN zypper up -y \
-&& zypper install -y gcc gcc-c++ cmake git \
+&& zypper install -y git gcc gcc-c++ cmake \
 && zypper clean -a
 ENV CC=gcc CXX=g++
-
-RUN cd /tmp \
-&& git clone https://github.com/Mizux/CoinUtils.git \
-&& cd CoinUtils \
-&& cmake -H. -Bbuild \
-&& cmake --build build --target install \
-&& cd .. \
-&& rm -rf CoinUtils
-
-RUN cd /tmp \
-&& git clone https://github.com/Mizux/Osi.git \
-&& cd Osi \
-&& cmake -H. -Bbuild \
-&& cmake --build build --target install \
-&& cd .. \
-&& rm -rf Osi
-
-RUN cd /tmp \
-&& git clone https://github.com/Mizux/Clp.git \
-&& cd Clp \
-&& cmake -H. -Bbuild \
-&& cmake --build build --target install \
-&& cd .. \
-&& rm -rf Clp
-
-RUN cd /tmp \
-&& git clone https://github.com/Mizux/Cgl.git \
-&& cd Cgl \
-&& cmake -H. -Bbuild \
-&& cmake --build build --target install \
-&& cd .. \
-&& rm -rf Cgl
-
 CMD [ "/bin/sh" ]
 
+
+
 # Add the library src to our build env
-FROM env AS devel
+FROM env AS cpp
 # Create lib directory
 WORKDIR /home/lib
 # Bundle lib source
@@ -56,10 +25,81 @@ RUN cmake --build build --target all -v
 # CMake build
 RUN cmake --build build --target install
 
+
+
+FROM env AS python
+# Swig install
+RUN zypper up -y \
+&& zypper install -y swig \
+&& zypper clean -a
+# Python install
+RUN zypper up -y \
+&& zypper install -y python \
+&& zypper clean -a
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_PYTHON=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
+
+
+
+FROM env AS java
+# Swig install
+RUN zypper up -y \
+&& zypper install -y swig \
+&& zypper clean -a
+# Java install
+RUN zypper up -y \
+&& zypper install -y openjdk \
+&& zypper clean -a
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_JAVA=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
+
+
+
+
+FROM env AS dotnet
+# Swig install
+RUN zypper up -y \
+&& zypper install -y swig \
+&& zypper clean -a
+# .Net install
+RUN zypper up -y \
+&& zypper install -y dotnet-sdk \
+&& zypper clean -a
+# Trigger first run experience by running arbitrary cmd
+RUN dotnet --info
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
+
+
+
 # Create an install image
 FROM env AS install
 # Copy lib from devel to prod
-COPY --from=devel /usr/local /usr/local/
+COPY --from=cpp /usr/local /usr/local/
 # Copy  sample
 WORKDIR /home/sample
-COPY .ci/sample .
+COPY ci/sample .
