--- a/ci/docker/ubuntu/Dockerfile
+++ b/ci/docker/ubuntu/Dockerfile
@@ -1,30 +1,88 @@
-FROM ubuntu:latest
+# Create a virtual environment with all tools installed
+# ref: https://hub.docker.com/_/ubuntu
+FROM ubuntu:latest AS env
 LABEL maintainer="mizux.dev@gmail.com"
-
-# Base install
+# Install system build dependencies
+ENV PATH=$PATH:/usr/local/bin
 RUN apt-get update -qq \
-&& apt-get install -yq git cmake build-essential \
+&& apt-get install -yq git build-essential cmake \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+CMD [ "/bin/sh" ]
 
+
+
+
+# Add the library src to our build env
+FROM env AS cpp
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild
+# CMake build
+RUN cmake --build build --target all
+# CMake build
+RUN cmake --build build --target install
+
+
+
+FROM env AS python
 # Swig
 RUN apt-get update -qq \
 && apt-get install -yq swig \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
 # Python install
 RUN apt-get update -qq \
 && apt-get install -yq python3-dev python3-pip \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_PYTHON=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
 
+
+
+FROM env AS java
+# Swig install
+RUN apt-get update -qq \
+&& apt-get install -yq swig \
+&& apt-get clean \
+&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # Java install
 RUN apt-get update -qq \
 && apt-get install -yq default-jdk \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_JAVA=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
 
+
+
+
+FROM env AS dotnet
+# Swig install
+RUN apt-get update -qq \
+&& apt-get install -yq swig \
+&& apt-get clean \
+&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # Dotnet install
 RUN apt-get update -qq \
 && apt-get install -yq wget gpg apt-transport-https \
@@ -33,6 +91,28 @@ RUN apt-get update -qq \
 && wget -q https://packages.microsoft.com/config/ubuntu/18.04/prod.list \
 && mv prod.list /etc/apt/sources.list.d/microsoft-prod.list \
 && apt-get update -qq \
-&& apt-get install -yq dotnet-sdk-2.1 \
+&& apt-get install -yq dotnet-sdk-3.1 \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# Trigger first run experience by running arbitrary cmd
+RUN dotnet --info
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
+
+
+
+# Create an install image
+FROM env AS install
+# Copy lib from devel to prod
+COPY --from=cpp /usr/local /usr/local/
+# Copy  sample
+WORKDIR /home/sample
+COPY ci/sample .
