--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -1,42 +1,131 @@
-FROM centos:7
+# Create a virtual environment with all tools installed
+# ref: https://hub.docker.com/_/centos
+FROM centos:latest AS env
 LABEL maintainer="mizux.dev@gmail.com"
-
-# Base install
+# Install system build dependencies
+ENV PATH=$PATH:/usr/local/bin
 RUN yum -y update \
-&& yum -y groupinstall 'Development Tools' \
+&& yum -y install git \
+&& yum -y groupinstall "Development Tools" \
+&& yum -y install epel-release \
+&& yum -y install cmake3 \
+&& ln -s /usr/bin/cmake3 /usr/local/bin/cmake \
 && yum clean all \
 && rm -rf /var/cache/yum
-# Install CMake
-RUN wget "https://cmake.org/files/v3.8/cmake-3.8.2-Linux-x86_64.sh" \
-&& chmod 775 cmake-3.8.2-Linux-x86_64.sh \
-&& yes | ./cmake-3.8.2-Linux-x86_64.sh --prefix=/usr --exclude-subdir
+CMD [ "/bin/sh" ]
 
+
+
+# Add the library src to our build env
+FROM env AS cpp
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
+
+
+
+# Add the library src to our build env
+FROM env AS python
 # Swig install
-RUN wget "https://downloads.sourceforge.net/project/swig/swig/swig-3.0.12/swig-3.0.12.tar.gz" \
-&& tar xvf swig-3.0.12.tar.gz \
-&& rm swig-3.0.12.tar.gz \
-&& cd swig-3.0.12 \
+RUN wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.1/swig-4.0.1.tar.gz" \
+&& tar xvf swig-4.0.1.tar.gz \
+&& rm swig-4.0.1.tar.gz \
+&& cd swig-4.0.1 \
 && ./configure --prefix=/usr \
 && make -j 4 \
 && make install \
 && cd .. \
-&& rm -rf swig-3.0.12
-
+&& rm -rf swig-4.0.1
 # Python install
 RUN yum -y update \
 && yum -y install python-devel python-setuptools python-six python-wheel \
 && yum clean all \
 && rm -rf /var/cache/yum
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_PYTHON=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
 
+
+
+# Add the library src to our build env
+FROM env AS java
+# Swig install
+RUN wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.1/swig-4.0.1.tar.gz" \
+&& tar xvf swig-4.0.1.tar.gz \
+&& rm swig-4.0.1.tar.gz \
+&& cd swig-4.0.1 \
+&& ./configure --prefix=/usr \
+&& make -j 4 \
+&& make install \
+&& cd .. \
+&& rm -rf swig-4.0.1
 # Java install
 RUN yum -y update \
 && yum -y install java-1.8.0-openjdk  java-1.8.0-openjdk-devel \
 && yum clean all \
 && rm -rf /var/cache/yum
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_JAVA=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
 
+
+
+# Add the library src to our build env
+FROM env AS dotnet
+# Swig install
+RUN wget "https://downloads.sourceforge.net/project/swig/swig/swig-4.0.1/swig-4.0.1.tar.gz" \
+&& tar xvf swig-4.0.1.tar.gz \
+&& rm swig-4.0.1.tar.gz \
+&& cd swig-4.0.1 \
+&& ./configure --prefix=/usr \
+&& make -j 4 \
+&& make install \
+&& cd .. \
+&& rm -rf swig-4.0.1
 # .Net install
 RUN rpm -Uvh "https://packages.microsoft.com/config/rhel/7/packages-microsoft-prod.rpm" \
 && yum -y update \
-&& yum -y install dotnet-sdk-2.1 \
+&& yum -y install dotnet-sdk-3.1 \
 && yum clean all \
 && rm -rf /var/cache/yum
+# Create lib directory
+WORKDIR /home/lib
+# Bundle lib source
+COPY . .
+# CMake configure
+RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
+# CMake build
+RUN cmake --build build --target all -v
+# CMake build
+RUN cmake --build build --target install
+
+
+
+# Create an install image
+FROM env AS install_cpp
+# Copy lib from devel to prod
+COPY --from=cpp /usr/local /usr/local/
+# Copy  sample
+WORKDIR /home/sample
+COPY ci/sample .
