Fix docker for cpp build

--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -23,9 +23,9 @@ WORKDIR /home/lib
 # Bundle lib source
 COPY . .
 # CMake configure
-RUN cmake -S. -Bbuild
+RUN cmake -H. -Bbuild
 # CMake build
-RUN cmake --build build --target all -v
+RUN cmake --build build --target all
 # CMake build
 RUN cmake --build build --target install
 
@@ -53,9 +53,9 @@ WORKDIR /home/lib
 # Bundle lib source
 COPY . .
 # CMake configure
-RUN cmake -S. -Bbuild -DBUILD_PYTHON=ON
+RUN cmake -H. -Bbuild -DBUILD_PYTHON=ON
 # CMake build
-RUN cmake --build build --target all -v
+RUN cmake --build build --target all
 # CMake build
 RUN cmake --build build --target install
 
@@ -83,9 +83,9 @@ WORKDIR /home/lib
 # Bundle lib source
 COPY . .
 # CMake configure
-RUN cmake -S. -Bbuild -DBUILD_JAVA=ON
+RUN cmake -H. -Bbuild -DBUILD_JAVA=ON
 # CMake build
-RUN cmake --build build --target all -v
+RUN cmake --build build --target all
 # CMake build
 RUN cmake --build build --target install
 
@@ -116,7 +116,7 @@ COPY . .
 # CMake configure
 RUN cmake -S. -Bbuild -DBUILD_DOTNET=ON
 # CMake build
-RUN cmake --build build --target all -v
+RUN cmake --build build --target all
 # CMake build
 RUN cmake --build build --target install
 
