ci: Check CMake version

--- a/ci/docker/alpine/Dockerfile
+++ b/ci/docker/alpine/Dockerfile
@@ -16,6 +16,8 @@ FROM env AS cpp
 WORKDIR /home/lib
 # Bundle lib source
 COPY . .
+# CMake version
+RUN cmake -version
 # CMake configure
 RUN cmake -S. -Bbuild
 # CMake build
