--- a/ci/docker/archlinux/Dockerfile
+++ b/ci/docker/archlinux/Dockerfile
@@ -15,6 +15,8 @@ FROM env AS cpp
 WORKDIR /home/lib
 # Bundle lib source
 COPY . .
+# CMake version
+RUN cmake -version
 # CMake configure
 RUN cmake -S. -Bbuild
 # CMake build
