Don'ttarget link python wrapper to python libraries
According to python PEP 513, since wrapper will be loaded by
 the python runtime instance, it's better to avoid to recursively
 load a different python library.

--- a/Bar/python/CMakeLists.txt
+++ b/Bar/python/CMakeLists.txt
@@ -26,8 +26,4 @@ elseif(UNIX)
 		INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PROJECT_NAME}/.libs"
 		)
 endif()
-target_link_libraries(pyBar
-	PRIVATE
-	Bar
-	${PYTHON_LIBRARIES}
-	)
+target_link_libraries(pyBar	PRIVATE	Bar)
