--- a/FooBar/python/CMakeLists.txt
+++ b/FooBar/python/CMakeLists.txt
@@ -24,8 +24,4 @@ elseif(UNIX)
 		INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PROJECT_NAME}/.libs"
 		)
 endif()
-target_link_libraries(pyFooBar
-	PRIVATE
-	FooBar
-	${PYTHON_LIBRARIES}
-	)
+target_link_libraries(pyFooBar PRIVATE FooBar)
