Fix Python on appveyor

--- a/Bar/python/CMakeLists.txt
+++ b/Bar/python/CMakeLists.txt
@@ -26,8 +26,12 @@ elseif(UNIX)
 		INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PROJECT_NAME}/.libs"
 		)
 endif()
-target_link_libraries(pyBar
-	PRIVATE
-	Bar
-	$<$<PLATFORM_ID:Windows>:${PYTHON_LIBRARIES}>
-	)
+target_link_libraries(pyBar	PRIVATE	Bar)
+
+# Variable PYTHON_LIBRARIES can contains keyword `optimized`
+# which won't be interpreted inside a generator expression.
+# i.e. we can't use: $<$<PLATFORM_ID:Windows>:${PYTHON_LIBRARIES}>
+# see: https://cmake.org/cmake/help/git-stage/command/target_link_libraries.html#command:target_link_libraries
+if(MSVC)
+  target_link_libraries(pyBar	PRIVATE	${PYTHON_LIBRARIES})
+endif()
