--- a/FooBar/python/CMakeLists.txt
+++ b/FooBar/python/CMakeLists.txt
@@ -24,8 +24,12 @@ elseif(UNIX)
 		INSTALL_RPATH "$ORIGIN:$ORIGIN/../../${PROJECT_NAME}/.libs"
 		)
 endif()
-target_link_libraries(pyFooBar
-	PRIVATE
-	FooBar
-	$<$<PLATFORM_ID:Windows>:${PYTHON_LIBRARIES}>
-	)
+target_link_libraries(pyFooBar PRIVATE FooBar)
+
+# Variable PYTHON_LIBRARIES can contains keyword `optimized`
+# which won't be interpreted inside a generator expression.
+# i.e. we can't use: $<$<PLATFORM_ID:Windows>:${PYTHON_LIBRARIES}>
+# see: https://cmake.org/cmake/help/git-stage/command/target_link_libraries.html#command:target_link_libraries
+if(MSVC)
+  target_link_libraries(pyFooBar	PRIVATE	${PYTHON_LIBRARIES})
+endif()
