--- a/ci/docker/alpine/Dockerfile
+++ b/ci/docker/alpine/Dockerfile
@@ -49,6 +49,7 @@ FROM env AS java
 # Swig install
 RUN apk add --no-cache swig
 # Java install
+ENV JAVA_HOME=/usr/lib/jvm/java-1.8-openjdk
 RUN apk add --no-cache openjdk8
 # Create lib directory
 WORKDIR /home/lib
@@ -67,7 +68,7 @@ FROM env AS dotnet
 # Swig install
 RUN apk add --no-cache swig
 # Add dependencies for disabling invariant mode (set in base image)
-RUN apk add --no-cache icu-libs
+RUN apk add --no-cache icu-libs	libintl
 # Install .NET Core SDK
 RUN dotnet_sdk_version=3.1.101 \
 && wget -O dotnet.tar.gz https://dotnetcli.azureedge.net/dotnet/Sdk/$dotnet_sdk_version/dotnet-sdk-$dotnet_sdk_version-linux-musl-x64.tar.gz \
