ci: Fix Fedora Java docker

--- a/ci/docker/fedora/Dockerfile
+++ b/ci/docker/fedora/Dockerfile
@@ -57,8 +57,9 @@ RUN dnf -y update \
 && dnf -y install swig \
 && dnf clean all
 # Java install
+ENV JAVA_HOME=/usr/lib/jvm/jre-1.8.0-openjdk
 RUN dnf -y update \
-&& dnf -y install java-1.8.0-openjdk \
+&& dnf -y install java-1.8.0-openjdk-devel \
 && dnf clean all
 # Create lib directory
 WORKDIR /home/lib
