--- a/ci/docker/ubuntu/Dockerfile
+++ b/ci/docker/ubuntu/Dockerfile
@@ -98,11 +98,9 @@ RUN apt-get update -qq \
 # .Net install
 # see: https://docs.microsoft.com/en-us/dotnet/core/install/linux-package-manager-ubuntu-1910
 RUN apt-get update -qq \
-&& apt-get install -yq wget gpg apt-transport-https \
-&& wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.asc.gpg \
-&& mv microsoft.asc.gpg /etc/apt/trusted.gpg.d/ \
-&& wget -q https://packages.microsoft.com/config/ubuntu/18.04/prod.list \
-&& mv prod.list /etc/apt/sources.list.d/microsoft-prod.list \
+&& apt-get install -yq wget apt-transport-https \
+&& wget -q https://packages.microsoft.com/config/ubuntu/19.10/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
+&& dpkg -i packages-microsoft-prod.deb \
 && apt-get update -qq \
 && apt-get install -yq dotnet-sdk-3.1 \
 && apt-get clean \
