--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,3 +19,20 @@ jobs:
       run: make --directory=ci test_alpine_java
     - name: Test .Net
       run: make --directory=ci test_alpine_dotnet
+
+  Ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build env image
+      run: make --directory=ci env_ubuntu
+    - name: Build project
+      run: make --directory=ci devel_ubuntu
+    - name: Test C++
+      run: make --directory=ci test_ubuntu_cpp
+    - name: Test Python
+      run: make --directory=ci test_ubuntu_python
+    - name: Test Java
+      run: make --directory=ci test_ubuntu_java
+    - name: Test .Net
+      run: make --directory=ci test_ubuntu_dotnet
