--- a/ci/docker/debian/Dockerfile
+++ b/ci/docker/debian/Dockerfile
@@ -9,15 +9,10 @@ RUN apt-get update -qq \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 # Install CMake 3.16.4
-RUN wget "https://cmake.org/files/v3.16/cmake-3.16.4.tar.gz" \
-&& tar xzf cmake-3.16.4.tar.gz \
-&& rm cmake-3.16.4.tar.gz \
-&& cd cmake-3.16.4 \
-&& ./bootstrap --prefix=/usr \
-&& make \
-&& make install \
-&& cd .. \
-&& rm -rf cmake-3.16.4
+RUN wget "https://cmake.org/files/v3.16/cmake-3.16.4-Linux-x86_64.sh" \
+&& chmod a+x cmake-3.16.4-Linux-x86_64.sh \
+&& ./cmake-3.16.4-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
+&& rm cmake-3.16.4-Linux-x86_64.sh
 CMD [ "/bin/sh" ]
 
 
