--- a/Bar/dotnet/CMakeLists.txt
+++ b/Bar/dotnet/CMakeLists.txt
@@ -3,11 +3,11 @@ set_property(SOURCE bar.i PROPERTY COMPILE_OPTIONS
   -namespace Mizux.CMakeSwig.Bar
   -dllimport mizux-cmakeswig-native
   )
-swig_add_library(dotnet_bar
+swig_add_library(dotnet_Bar
 	TYPE OBJECT
 	LANGUAGE csharp
   OUTPUT_DIR ${PROJECT_BINARY_DIR}/dotnet/${PROJECT_NAME}/Bar
 	SOURCES	bar.i)
 
-set_property(TARGET dotnet_bar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
-target_link_libraries(dotnet_bar PRIVATE CMakeSwig::Bar)
+set_property(TARGET dotnet_Bar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
+target_link_libraries(dotnet_Bar PRIVATE CMakeSwig::Bar)
