--- a/Bar/dotnet/CMakeLists.txt
+++ b/Bar/dotnet/CMakeLists.txt
@@ -1,13 +1,13 @@
 set_property(SOURCE bar.i PROPERTY CPLUSPLUS ON)
 set_property(SOURCE bar.i PROPERTY COMPILE_OPTIONS
   -namespace ${CMAKE_SWIG_DOTNET}.Bar
-  -dllimport mizux-cmakeswig-native
-  )
+  -dllimport mizux-cmakeswig-native)
 swig_add_library(dotnet_Bar
 	TYPE OBJECT
 	LANGUAGE csharp
   OUTPUT_DIR ${PROJECT_BINARY_DIR}/dotnet/${PROJECT_NAME}/Bar
 	SOURCES	bar.i)
-
-set_property(TARGET dotnet_Bar PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON)
+set_target_properties(dotnet_Bar PROPERTIES
+  SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON
+  POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(dotnet_Bar PRIVATE CMakeSwig::Bar)
