--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,12 +77,20 @@ message(STATUS "Build .Net: ${BUILD_DOTNET}")
 include(CTest)
 if(BUILD_TESTING)
   include(FetchContent)
+  #FetchContent_Declare(
+  #  googletest
+  #  GIT_REPOSITORY https://github.com/google/googletest.git
+  #  GIT_TAG master)
+  #set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+  #FetchContent_MakeAvailable(googletest)
   FetchContent_Declare(
-    googletest
-    GIT_REPOSITORY https://github.com/google/googletest.git
-    GIT_TAG release-1.10.0)
-  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-  FetchContent_MakeAvailable(googletest)
+    Catch2
+    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+    GIT_TAG master
+    GIT_SHALLOW TRUE
+    GIT_PROGRESS TRUE
+  )
+  FetchContent_MakeAvailable(Catch2)
 endif()
 
 include(cpp)
